[tool.poetry]
name = "duck"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
Flask = "^3.0.1"
Flask-Cors = "axios"
web3 = "^6.15.0"
python-dotenv = "^1.0.1"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
